# pumpfunparser

./: .env.example  .gitignore  README.md  database.db  pyproject.toml
bot/: __main__.py  config.py  notify_channel.py  pumpfun_api.py  pumpfun_socket.py  sql_function.py
bot/db/: create_tables.py  db.py  models.py
bot/utils/: logger.py
